plugins {
    // Apply the java plugin to add support for Java
    id 'java'

    // Apply the application plugin to add support for building a CLI application.
    id 'application'

    //Apply the idea plugin to add support for Intellij IDEA
    id 'idea'

    //Apply the JavaFX plugin to add support for JavaFX libraries
    id 'org.openjfx.javafxplugin' version '0.0.8'

    //Apply the shadow plugin to add support for creating a fat jar
    id "com.github.johnrengelman.shadow" version "5.2.0"

    //Apply the jlink plugin to add support for creating custom runtime images
    id "org.beryx.jlink" version "2.19.0"
}

repositories {
    // Use jcenter for resolving dependencies.
    jcenter()
}

/*run {
jvmArgs = {
    "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix", 
        "--add-exports=javafx.controls/com.sun.javafx.scene.control=com.jfoenix", 
        "--add-exports=javafx.base/com.sun.javafx.binding=com.jfoenix",
    "--add-exports=javafx.graphics/com.sun.javafx.stage=com.jfoenix",
    "--add-exports=javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix"
}
*//*     jvmArgs = [ 

]*//*
 }*/

dependencies {
    // This dependency is used by the application.
    implementation 'com.google.guava:guava:28.2-jre'
    implementation 'com.jfoenix:jfoenix:9.0.8'

    // Use JUnit test framework
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.4.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.4.2'

    // Add support for Efficient Java Matrix Library
    implementation (group: 'org.ejml', name: 'ejml-simple', version: '0.39'){
        exclude group: 'org.ejml', module: 'ejml-fdense'
        exclude group: 'org.ejml', module: 'ejml-zdense'
        exclude group: 'org.ejml', module: 'ejml-cdense'
        exclude group: 'org.ejml', module: 'ejml-dsparse'
        exclude group: 'org.ejml', module: 'ejml-csparse'
    }


}

java {
    sourceCompatibility = JavaVersion.VERSION_14
    targetCompatibility = JavaVersion.VERSION_14
}

application {
    // Define the main class for the application.
    mainClassName = 'LogicCircuitSimulator/LogicCircuitSimulator.Launcher'
}

javafx{
    version = "11.0.2"
    modules = ['javafx.controls', 'javafx.fxml']
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}

jlink {
    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
    launcher {
        name = 'Simulator'
    }
}